# palimpsest

./: .gitignore  2026-06-13-scorer-registry-orchestrator-design.md  AGENTS.md  CLAUDE.md  DESIGN-REVIEW.md  GEMINI.md  HUMAN_DO_THIS.md  OFFLINE-INSTRUCTIONS.md  ORIGINAL_REQUEST.md  README.md  TODO.md  WORK-LOG.md  config.toml  config.toml.example  monitor.html  palimpsest-phase1-plan.md  palimpsest-phase2-plan.md  phase3-spec.md  pyproject.toml  update_features.py  update_type_a.py
.agents/: ORIGINAL_REQUEST.md
deploy/: GONKTOP-SETUP.md  com.palimpsest.broker.plist  com.palimpsest.orchestrator.plist  com.palimpsest.server.plist  com.palimpsest.worker-m5.plist  com.palimpsest.worker.plist
palimpsest/: __init__.py  broker.py  config.py  db.py  harvester.py  indexer.py  orchestrator.py  preflight.py  results.py  review.py  server.py  triage.py  worker.py
reports/: eval-report-1.md  forensic-integrity-audit.md  phase1-verification.md
scripts/: claude_brief_worker.py  gemini_features_worker.py  ollama_features_worker.py  update_jobs.py  vision_ocr_rescue.py  watchdog.sh
specs/: 00-ARCHITECTURE.md  CONFIRMED-OPENNET.md  EVAL-PLAN.md  EVAL-TRUST-GATE.md  FINDING-TYPES.md  RECON-ML-PIPELINE.md  TASK-00-mlpipeline-recon.md  TASK-00b-opennet-probe.md  TASK-01-scaffold-config-db.md  TASK-02-broker.md  TASK-03-harvester.md  TASK-04-worker-daemon.md  TASK-05-ocr.md  TASK-06-features.md  TASK-07-embed-index-gapjoin.md  TASK-08-mcp-server.md  TASK-09-review-cli-skill.md  TASK-10-verification-run.md  TASK-11-eval-schema-config.md  TASK-12-eval-isolation-embedding.md  TASK-13-eval-generator-ab-oracle.md  TASK-14-eval-generator-c.md  TASK-15-eval-runner-cli.md  TASK-16-eval-calibration.md  TASK-17-eval-metrics-report.md  TASK-18-trust-gate-enforcement.md  TASK-19-eval-verification-run.md  TASK-20-document-brief.md
tests/: test_brief.py  test_broker.py  test_config.py  test_config_orchestrator.py  test_db.py  test_dosage.py  test_e2e_finding_types.py  test_embed.py  test_eval_calibrate.py  test_eval_embedding.py  test_eval_gate.py  test_eval_generators_ab.py  test_eval_generators_c.py  test_eval_isolation.py  test_eval_metrics.py  test_eval_oracle.py  test_eval_runner.py  test_eval_schema.py  test_eval_stats.py  test_eval_type_d.py  test_features.py  test_gapjoin.py  (+18 more)
(+109 files in other folders)
