[project]
name = "palimpsest"
version = "0.1.0"
description = "Systematic redacted text recovery pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "beautifulsoup4",
    "pytest",
    "tomli; python_version < '3.12'",
    "spacy",
    "opencv-python-headless",
    "numpy",
    "pymupdf>=1.27.2.3",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "ocrmac>=1.0.1; sys_platform == 'darwin'",
    "faiss-cpu",
    "mcp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
