[project]
name = "palimpsest"
version = "0.1.0"
description = "Systematic redacted text recovery pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "beautifulsoup4",
    "pytest",
    "tomli; python_version < '3.12'",
    "spacy",
    "opencv-python-headless",
    "numpy",
    "pymupdf>=1.27.2.3",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "ocrmac>=1.0.1; sys_platform == 'darwin'",
    "faiss-cpu",
    "mcp",
    "anthropic>=0.111.0",
]

[project.scripts]
palimpsest = "palimpsest.indexer:main"
palimpsest-review    = "palimpsest.review:main"
palimpsest-preflight = "palimpsest.preflight:main"
palimpsest-orchestrator = "palimpsest.orchestrator:main"
palimpsest-eval = "palimpsest.eval.cli:main"
palimpsest-triage = "palimpsest.triage:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["palimpsest*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

